--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-osx-dock": "^2.0.0",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
